--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -7,4 +7,8 @@ body {
     justify-content: center;
     align-items: center;
     gap: 40px;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background-color: #1b1a22;
 }
