--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -9,6 +9,9 @@ body {
     font-family: sans-serif;
     overflow: auto;
     user-select: none;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .bottomNav {
