--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -1,6 +1,6 @@
 body {
     width: 100vw;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     margin: 0;
     padding: 0;
     display: flex;
