--- a/templates/drive.html
+++ b/templates/drive.html
@@ -6,13 +6,6 @@
     <link rel="stylesheet" href="/static/styles/drive.css">
     <link rel="manifest" href="/manifest.webmanifest">
 </head>
-<body>
-
-<div class="modal">
-    <div class="modalContent">
-
-    </div>
-</div>
 
 <div class="topNav">
     <div style="display: flex; justify-content: flex-start; align-items: center; gap: 80px; margin-left: 40px;">
@@ -35,6 +28,15 @@
         </svg>
     </div>
 </div>
+
+<body>
+
+<div class="modal">
+    <div class="modalContent">
+
+    </div>
+</div>
+
 
 <div onclick="click_in_center(event)" class="center">
     {% for element in directory %}
@@ -76,6 +78,8 @@
     {% endfor %}
 </div>
 
+</body>
+
 <div class="bottomNav">
     <button class="bottomNavButton">
         <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-folder" width="60" height="60" fill="#6752d1"
@@ -104,7 +108,8 @@
         <span style="color: white; font-size: 40px;">"{{request_folder}}"</span>
         {% endif %}
     </div>
-    <div onclick="on_click_new_folder_in_add_menu('{{request_folder}}')" style="width: 90%; display: flex; justify-content: flex-start; align-items: center; gap: 40px; margin-left: 40px;">
+    <div onclick="on_click_new_folder_in_add_menu('{{request_folder}}')"
+         style="width: 90%; display: flex; justify-content: flex-start; align-items: center; gap: 40px; margin-left: 40px;">
         <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="white" class="bi bi-folder-plus"
              viewBox="0 0 16 16">
             <path d="m.5 3 .04.87a2 2 0 0 0-.342 1.311l.637 7A2 2 0 0 0 2.826 14H9v-1H2.826a1 1 0 0 1-.995-.91l-.637-7A1 1 0 0 1 2.19 4h11.62a1 1 0 0 1 .996 1.09L14.54 8h1.005l.256-2.819A2 2 0 0 0 13.81 3H9.828a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 6.172 1H2.5a2 2 0 0 0-2 2m5.672-1a1 1 0 0 1 .707.293L7.586 3H2.19q-.362.002-.683.12L1.5 2.98a1 1 0 0 1 1-.98z"/>
@@ -121,7 +126,8 @@
 
         <label style="color: white; font-size: 40px;">
             Upload File
-            <input onchange="on_change_upload_file('{{request_folder}}')" id="input_file" type="file" style="display: none" multiple/>
+            <input onchange="on_change_upload_file('{{request_folder}}')" id="input_file" type="file"
+                   style="display: none" multiple/>
         </label>
     </div>
 </div>
@@ -129,8 +135,6 @@
 <div class="editMenu">
 
 </div>
-
-</body>
 
 <script type="text/javascript" src="/static/scripts/drive.js"></script>
 
