--- a/templates/drive.html
+++ b/templates/drive.html
@@ -43,15 +43,15 @@
     {% if "." in element %}
     <div class="element">
         <div onclick="on_click_file('{{request_folder}}', '{{element}}')"
-             style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; margin-left: 20px; max-width: 90%; width: 90%">
+             style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; margin-left: 20px; max-width: 80%; width: 80%">
             <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="#18a8ff"
                  class="bi bi-file-earmark-fill" viewBox="0 0 16 16">
                 <path d="M4 0h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2m5.5 1.5v2a1 1 0 0 0 1 1h2z"/>
             </svg>
             <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
-        <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="margin-right: 40px;">
-            <svg id="edit_x" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white"
+        <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="padding: 40px;">
+            <svg id="edit_x" xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="white"
                  class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
                 <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
             </svg>
@@ -60,7 +60,7 @@
     {% else %}
     <div class="element">
         <div onclick="on_click_folder('{{request_folder}}', '{{element}}')"
-             style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; padding: 20px; max-width: 90%; width: 90%">
+             style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; padding: 20px; max-width: 80%; width: 80%">
             <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="#18a8ff" class="bi bi-folder-fill"
                  viewBox="0 0 16 16">
                 <path d="M9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.825a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3m-8.322.12q.322-.119.684-.12h5.396l-.707-.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981z"/>
@@ -68,7 +68,7 @@
             <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
         <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="padding: 40px;">
-            <svg id="edit_x" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white"
+            <svg id="edit_x" xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="white"
                  class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
                 <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
             </svg>
