--- a/templates/drive.html
+++ b/templates/drive.html
@@ -50,7 +50,7 @@
             </svg>
             <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
-        <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="padding: 40px;">
+        <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="padding-right: 40px;">
             <svg id="edit_x" xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="white"
                  class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
                 <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
@@ -67,7 +67,7 @@
             </svg>
             <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
-        <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="padding: 40px;">
+        <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="padding-right: 40px;">
             <svg id="edit_x" xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="white"
                  class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
                 <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
