--- a/templates/login.html
+++ b/templates/login.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="/static/styles/login.css">
 </head>
 <body>
-    <span style="color: white; font-size: 60px; margin-bottom: 20%;">Login</span>
-    <input id="input_mail" type="text" placeholder="mail" style="color: white; background-color: transparent; border: 1px solid #8992B0; border-radius: 30px; padding: 40px; font-size: 40px; width: 80%;"/>
-    <input id="input_password" type="password" placeholder="password" style="color: white; background-color: transparent; border: 1px solid #8992B0; border-radius: 30px; padding: 40px; font-size: 40px; width: 80%;"/>
-    <button onclick="on_click_login()" style="width: 90%; border-radius: 30px; border: 0; color: white; background-color: #6752d1; padding: 40px; font-size: 40px; margin-top: 20%;">Login</button>
+    <span class="heading">Login</span>
+    <input id="input_mail" type="text" placeholder="mail" />
+    <input id="input_password" type="password" placeholder="password"/>
+    <button onclick="on_click_login()">Login</button>
 </body>
 
 <script type="text/javascript" src="/static/scripts/login.js"></script>
