--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -1,5 +1,5 @@
 html {
-     background-color: #1b1a22;
+    background-color: #1b1a22;
 }
 
 body {
@@ -44,6 +44,15 @@ body {
     align-items: center;
 }
 
+.addButtonSVG {
+    width: 60px;
+    height: 60px;
+}
+
+.folderPathFont {
+    font-size: 40px;
+}
+
 .center {
     background-color: #1b1a22;
     width: 100%;
@@ -56,6 +65,16 @@ body {
     overflow-y: scroll;
 }
 
+.folderIconSVG {
+    width: 100px;
+    height: 100px;
+}
+
+.editButtonSVG {
+    width: 60px;
+    height: 60px;
+}
+
 .bottomNavButton {
     display: flex;
     flex-direction: column;
@@ -64,6 +83,11 @@ body {
     padding: 20px 80px;
     background-color: transparent;
     border: 0;
+}
+
+.bottomNavButton svg {
+    width: 60px;
+    height: 60px;
 }
 
 
@@ -134,4 +158,94 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
+}
+
+.editMenuSVG {
+    width: 60px;
+    height: 60px
+}
+
+.modalContentInput {
+    border: 1px solid #8992B0;
+    border-radius: 30px;
+    width: 90%;
+    color: white;
+    background-color: transparent;
+    padding: 40px;
+}
+
+
+@media (min-device-width: 12cm) {
+    body {
+        overflow: hidden;
+    }
+
+    .modalContentInput {
+        padding: 20px;
+    }
+
+    .bottomNavButton svg {
+        width: 30px;
+        height: 30px;
+    }
+
+    .bottomNavButton span {
+        font-size: 18px;
+    }
+
+    .addButtonSVG {
+        width: 30px;
+        height: 30px;
+    }
+
+    .folderPathFont {
+        font-size: 20px;
+    }
+
+    .folderIconSVG {
+        width: 50px;
+        height: 50px;
+    }
+
+    .editButtonSVG {
+        width: 30px;
+        height: 30px;
+    }
+
+    .element {
+        height: 70px;
+    }
+
+    .element span {
+        font-size: 20px;
+    }
+
+    .center {
+        gap: 0;
+    }
+
+    .center::-webkit-scrollbar {
+        display: none;
+    }
+
+    .editMenuSVG {
+        width: 30px;
+        height: 30px;
+    }
+
+    .editMenu {
+        height: 30%;
+        width: 50%;
+        left: auto;
+    }
+
+    .addMenu {
+        height: 20%;
+        width: 50%;
+        left: auto;
+    }
+
+    .modalContent {
+        width: 50%;
+    }
 }
