--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -16,3 +16,50 @@ body {
     font-family: sans-serif;
     background-color: #1b1a22;
 }
+
+.heading {
+    color: white;
+    font-size: 60px;
+    margin-bottom: 20%;
+}
+
+input {
+    color: white;
+    background-color: transparent;
+    border: 1px solid #8992B0;
+    border-radius: 30px;
+    padding: 40px;
+    font-size: 40px;
+    width: 80%;
+}
+
+button {
+    width: 90%;
+    border-radius: 30px;
+    border: 0;
+    color: white;
+    background-color: #6752d1;
+    padding: 40px;
+    font-size: 40px;
+    margin-top: 20%;
+}
+
+@media (min-device-width: 12cm) {
+    .heading {
+        font-size: 25px;
+        margin-bottom: 20px;
+    }
+
+    input {
+        font-size: 18px;
+        width: 50%;
+        padding: 20px;
+    }
+
+    button {
+        font-size: 18px;
+        width: 50%;
+        padding: 20px;
+        margin-top: 20px;
+    }
+}
