--- a/templates/drive.html
+++ b/templates/drive.html
@@ -9,7 +9,7 @@
 
 <div class="topNav">
     <div style="display: flex; justify-content: flex-start; align-items: center; gap: 80px; margin-left: 40px;">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-list addButtonSVG"
+        <svg onclick="on_click_open_sidebar()" xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-list addButtonSVG"
              viewBox="0 0 16 16">
             <path fill-rule="evenodd"
                   d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
@@ -36,7 +36,6 @@
 
     </div>
 </div>
-
 
 <div onclick="click_in_center(event)" class="center">
     {% for element in directory %}
@@ -134,6 +133,10 @@
 
 <div class="editMenu">
 
+</div>
+
+<div class="sideBar" id="sideBar">
+    <button onclick="logout()" class="folderPathFont buttonSideBar" style="background-color: #6752d1; color: white; border: 0; border-radius: 30px; width: 90%;">Logout</button>
 </div>
 
 <script type="text/javascript" src="/static/scripts/drive.js"></script>
