--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -174,6 +174,27 @@ body {
     padding: 40px;
 }
 
+.sideBar {
+    position: absolute;
+    height: 100%;
+    width: 70%;
+    top: 0;
+    left: 0;
+    background-color: #26242f;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding-top: 40px;
+    gap: 40px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+.buttonSideBar {
+    padding: 40px;
+}
+
 
 @media (min-device-width: 12cm) {
     body {
@@ -185,12 +206,12 @@ body {
     }
 
     .bottomNavButton svg {
-        width: 25px;
-        height: 25px;
+        width: 20px;
+        height: 20px;
     }
 
     .bottomNavButton span {
-        font-size: 18px;
+        font-size: 16px;
     }
 
     .addButtonSVG {
@@ -247,5 +268,13 @@ body {
 
     .modalContent {
         width: 50%;
+    }
+
+    .sideBar {
+        width: 300px;
+    }
+
+    .buttonSideBar {
+        padding: 10px;
     }
 }
