--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -177,6 +177,7 @@ body {
 .sideBar {
     position: absolute;
     height: 100%;
+    max-height: 100vh;
     width: 70%;
     top: 0;
     left: 0;
