--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -176,7 +176,7 @@ body {
 
 .sideBar {
     position: absolute;
-    height: 100%;
+    height: 100vh;
     max-height: 100vh;
     width: 70%;
     top: 0;
@@ -186,7 +186,6 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    padding-top: 40px;
     gap: 40px;
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
