--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -50,16 +50,20 @@ button {
         margin-bottom: 20px;
     }
 
+    body {
+        gap: 10px;
+    }
+
     input {
-        font-size: 18px;
-        width: 50%;
-        padding: 20px;
+        font-size: 16px;
+        width: 400px;
+        padding: 10px;
     }
 
     button {
-        font-size: 18px;
-        width: 50%;
-        padding: 20px;
-        margin-top: 20px;
+        font-size: 16px;
+        width: 400px;
+        padding: 10px;
+        margin-top: 10px;
     }
 }
