--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -66,8 +66,8 @@ body {
 }
 
 .folderIconSVG {
-    min-width: 100px;
-    min-height: 100px;
+    width: 100px;
+    height: 100px;
 }
 
 .editButtonSVG {
