--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -227,6 +227,7 @@ body {
 
     .modalContentInput {
         padding: 10px;
+        border-radius: 10px;
     }
 
     .bottomNavButton svg {
@@ -293,6 +294,7 @@ body {
     .modalContent {
         width: 50%;
         padding: 20px;
+        border-radius: 10px;
     }
 
     .sideBar {
