--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -58,6 +58,7 @@ button {
         font-size: 16px;
         width: 400px;
         padding: 10px;
+        border-radius: 10px;
     }
 
     button {
@@ -65,5 +66,6 @@ button {
         width: 400px;
         padding: 10px;
         margin-top: 10px;
+        border-radius: 10px;
     }
 }
