--- a/templates/drive.html
+++ b/templates/drive.html
@@ -9,7 +9,8 @@
 
 <div class="topNav">
     <div style="display: flex; justify-content: flex-start; align-items: center; gap: 80px; margin-left: 40px;">
-        <svg onclick="on_click_open_sidebar()" xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-list addButtonSVG"
+        <svg onclick="on_click_open_sidebar()" xmlns="http://www.w3.org/2000/svg" fill="white"
+             class="bi bi-list addButtonSVG"
              viewBox="0 0 16 16">
             <path fill-rule="evenodd"
                   d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
@@ -40,49 +41,53 @@
 <div onclick="click_in_center(event)" class="center">
     {% for element in directory %}
     {% if "." in element %}
-        {% if "png" in element.lower() or "jpg" in element.lower() or "jpeg" in element.lower() %}
-        <div class="element higherElement">
+    {% if "png" in element.lower() or "jpg" in element.lower() or "jpeg" in element.lower() %}
+    <div class="element higherElement">
         {% else %}
         <div class="element">
-        {% endif %}
-        <div onclick="on_click_file('{{request_folder}}', '{{element}}')"
-             style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; margin-left: 20px; max-width: 80%; width: 80%">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="#18a8ff"
-                 class="bi bi-file-earmark-fill folderIconSVG" viewBox="0 0 16 16">
-                <path d="M4 0h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2m5.5 1.5v2a1 1 0 0 0 1 1h2z"/>
-            </svg>
-            <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
-            {% if "png" in element.lower() or "jpg" in element.lower() or "jpeg" in element.lower() %}
-            <img src="/drive/getfile?file={{request_folder}}/{{element}}&scale_down=true">
             {% endif %}
+            <div onclick="on_click_file('{{request_folder}}', '{{element}}')"
+                 style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; margin-left: 20px; max-width: 80%; width: 80%">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="#18a8ff"
+                     class="bi bi-file-earmark-fill folderIconSVG" viewBox="0 0 16 16">
+                    <path d="M4 0h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2m5.5 1.5v2a1 1 0 0 0 1 1h2z"/>
+                </svg>
+
+                {% if "png" in element.lower() or "jpg" in element.lower() or "jpeg" in element.lower() %}
+                <img src="/drive/getfile?file={{request_folder}}/{{element}}&scale_down=true">
+                {% else %}
+                <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
+                {% endif %}
+            </div>
+            <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="padding-right: 40px;">
+                <svg onclick="on_click_edit('{{request_folder}}', '{{element}}')" id="edit_x"
+                     xmlns="http://www.w3.org/2000/svg" fill="white"
+                     class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
+                    <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
+                </svg>
+            </div>
         </div>
-        <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="padding-right: 40px;">
-            <svg onclick="on_click_edit('{{request_folder}}', '{{element}}')" id="edit_x" xmlns="http://www.w3.org/2000/svg" fill="white"
-                 class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
-                <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
-            </svg>
+        {% else %}
+        <div class="element">
+            <div onclick="on_click_folder('{{request_folder}}', '{{element}}')"
+                 style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; padding: 20px; max-width: 80%; width: 80%">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="#18a8ff" class="bi bi-folder-fill folderIconSVG"
+                     viewBox="0 0 16 16">
+                    <path d="M9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.825a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3m-8.322.12q.322-.119.684-.12h5.396l-.707-.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981z"/>
+                </svg>
+                <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
+            </div>
+            <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="padding-right: 40px;">
+                <svg onclick="on_click_edit('{{request_folder}}', '{{element}}')" id="edit_x"
+                     xmlns="http://www.w3.org/2000/svg" fill="white"
+                     class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
+                    <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
+                </svg>
+            </div>
         </div>
+        {% endif %}
+        {% endfor %}
     </div>
-    {% else %}
-    <div class="element">
-        <div onclick="on_click_folder('{{request_folder}}', '{{element}}')"
-             style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; padding: 20px; max-width: 80%; width: 80%">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="#18a8ff" class="bi bi-folder-fill folderIconSVG"
-                 viewBox="0 0 16 16">
-                <path d="M9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.825a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3m-8.322.12q.322-.119.684-.12h5.396l-.707-.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981z"/>
-            </svg>
-            <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
-        </div>
-        <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="padding-right: 40px;">
-            <svg onclick="on_click_edit('{{request_folder}}', '{{element}}')" id="edit_x" xmlns="http://www.w3.org/2000/svg" fill="white"
-                 class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
-                <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
-            </svg>
-        </div>
-    </div>
-    {% endif %}
-    {% endfor %}
-</div>
 
 </body>
 
@@ -143,7 +148,10 @@
 </div>
 
 <div class="sideBar" id="sideBar">
-    <button onclick="logout()" class="folderPathFont buttonSideBar" style="margin-top: 40px; background-color: #6752d1; color: white; border: 0; border-radius: 30px; width: 90%;">Logout</button>
+    <button onclick="logout()" class="folderPathFont buttonSideBar"
+            style="margin-top: 40px; background-color: #6752d1; color: white; border: 0; border-radius: 30px; width: 90%;">
+        Logout
+    </button>
 </div>
 
 <script type="text/javascript" src="/static/scripts/drive.js"></script>
