--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,7 @@
     <input id="input_mail" type="text" placeholder="username" />
     <input id="input_password" type="password" placeholder="password"/>
     <button onclick="on_click_login()">Login</button>
+    <span class="heading" style="color: red;">This Website is in DEV</span>
 </body>
 
 <script type="text/javascript" src="/static/scripts/login.js"></script>
