--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <span class="heading">Login</span>
-    <input id="input_mail" type="text" placeholder="username" />
+    <input id="input_mail" type="text" placeholder="mail" />
     <input id="input_password" type="password" placeholder="password"/>
     <button onclick="on_click_login()">Login</button>
     <span class="heading" style="color: red;">This Website is in DEV</span>
