--- a/templates/login.html
+++ b/templates/login.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="/static/styles/login.css">
 </head>
 <body>
+<div>
     <span class="heading">Login</span>
-    <input id="input_mail" type="text" placeholder="mail" />
+    <input id="input_mail" type="text" placeholder="mail"/>
     <input id="input_password" type="password" placeholder="password"/>
     <button onclick="on_click_login()">Login</button>
     <span class="heading" style="color: red;">This Website is in DEV</span>
+</div>
 </body>
 
 <script type="text/javascript" src="/static/scripts/login.js"></script>
