--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -17,6 +17,15 @@ body {
     background-color: #1b1a22;
 }
 
+.main {
+    width: 90%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .heading {
     color: white;
     font-size: 60px;
