--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/static/styles/login.css">
 </head>
 <body>
-<div class=".main">
+<div class="main">
     <span class="heading">Login</span>
     <input id="input_mail" type="text" placeholder="mail"/>
     <input id="input_password" type="password" placeholder="password"/>
