--- a/templates/share.html
+++ b/templates/share.html
@@ -30,45 +30,43 @@
     {% for element in directory %}
     {% if "." in element %}
 
-        <div class="element">
+    <div class="element">
 
-            <div
-                 style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; margin-left: 20px; max-width: 80%; width: 80%">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="#18a8ff"
-                     class="bi bi-file-earmark-fill folderIconSVG" viewBox="0 0 16 16">
-                    <path d="M4 0h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2m5.5 1.5v2a1 1 0 0 0 1 1h2z"/>
-                </svg>
-                <span style="max-width: 60%; overflow: hidden; white-space: nowrap">{{element}}</span>
-            </div>
-            <div style="padding-right: 40px;">
-                <svg id="edit_x"
-                     xmlns="http://www.w3.org/2000/svg" fill="white"
-                     class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
-                    <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
-                </svg>
-            </div>
+        <div style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; margin-left: 20px; max-width: 80%; width: 80%">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="#18a8ff"
+                 class="bi bi-file-earmark-fill folderIconSVG" viewBox="0 0 16 16">
+                <path d="M4 0h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2m5.5 1.5v2a1 1 0 0 0 1 1h2z"/>
+            </svg>
+            <span style="max-width: 60%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
-        {% else %}
-        <div class="element">
-            <div
-                 style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; padding: 20px; max-width: 80%; width: 80%">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="#18a8ff" class="bi bi-folder-fill folderIconSVG"
-                     viewBox="0 0 16 16">
-                    <path d="M9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.825a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3m-8.322.12q.322-.119.684-.12h5.396l-.707-.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981z"/>
-                </svg>
-                <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
-            </div>
-            <div style="padding-right: 40px;">
-                <svg id="edit_x"
-                     xmlns="http://www.w3.org/2000/svg" fill="white"
-                     class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
-                    <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
-                </svg>
-            </div>
+        <div onclick="on_click_edit_share('{{element}}')" style="padding-right: 40px;">
+            <svg id="edit_x"
+                 xmlns="http://www.w3.org/2000/svg" fill="white"
+                 class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
+                <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
+            </svg>
         </div>
-        {% endif %}
-        {% endfor %}
     </div>
+    {% else %}
+    <div class="element">
+        <div style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; padding: 20px; max-width: 80%; width: 80%">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="#18a8ff" class="bi bi-folder-fill folderIconSVG"
+                 viewBox="0 0 16 16">
+                <path d="M9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.825a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3m-8.322.12q.322-.119.684-.12h5.396l-.707-.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981z"/>
+            </svg>
+            <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
+        </div>
+        <div onclick="on_click_edit_share('{{element}}')" style="padding-right: 40px;">
+            <svg id="edit_x"
+                 xmlns="http://www.w3.org/2000/svg" fill="white"
+                 class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
+                <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
+            </svg>
+        </div>
+    </div>
+    {% endif %}
+    {% endfor %}
+</div>
 
 </body>
 
@@ -99,7 +97,7 @@
 
     </div>
     <div
-         style="width: 90%; display: flex; justify-content: flex-start; align-items: center; gap: 40px; margin-left: 40px;">
+            style="width: 90%; display: flex; justify-content: flex-start; align-items: center; gap: 40px; margin-left: 40px;">
         <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-folder-plus editMenuSVG"
              viewBox="0 0 16 16">
             <path d="m.5 3 .04.87a2 2 0 0 0-.342 1.311l.637 7A2 2 0 0 0 2.826 14H9v-1H2.826a1 1 0 0 1-.995-.91l-.637-7A1 1 0 0 1 2.19 4h11.62a1 1 0 0 1 .996 1.09L14.54 8h1.005l.256-2.819A2 2 0 0 0 13.81 3H9.828a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 6.172 1H2.5a2 2 0 0 0-2 2m5.672-1a1 1 0 0 1 .707.293L7.586 3H2.19q-.362.002-.683.12L1.5 2.98a1 1 0 0 1 1-.98z"/>
@@ -134,5 +132,6 @@
 </div>
 
 <script type="text/javascript" src="/static/scripts/drive.js"></script>
+<script type="text/javascript" src="/static/scripts/share_only.js"></script>
 
 </html>
