--- a/templates/drive.html
+++ b/templates/drive.html
@@ -76,13 +76,13 @@
                 </svg>
                 <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
             </div>
-            <button onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="padding-right: 40px; width: 80px; height: 40px; display: flex; justify-content: center; align-items: center; background-color: black; border: 0;">
-                <svg id="edit_x"
+            <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="margin-right: 40px;">
+                <svg onclick="on_click_edit('{{request_folder}}', '{{element}}')" id="edit_x"
                      xmlns="http://www.w3.org/2000/svg" fill="white"
                      class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
                     <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
                 </svg>
-            </button>
+            </div>
         </div>
         {% endif %}
         {% endfor %}
