--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -119,6 +119,9 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    transition: all .5s ease;
 }
 
 .bottomNavButton span {
