--- a/templates/drive.html
+++ b/templates/drive.html
@@ -33,7 +33,7 @@
 <body>
 
 <div class="modal">
-    <div class="modalContent">
+    <div class="modalContent" id="modalContent">
 
     </div>
 </div>
