--- a/templates/drive.html
+++ b/templates/drive.html
@@ -32,7 +32,7 @@
 
 <body>
 
-<div class="modal">
+<div class="modal" onclick="on_modal_click(event)">
     <div class="modalContent" id="modalContent">
 
     </div>
