--- a/templates/share.html
+++ b/templates/share.html
@@ -43,8 +43,8 @@
             <button id="edit_x" style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: transparent; border: 0;">
             <svg id="edit_x"
                  xmlns="http://www.w3.org/2000/svg" fill="white"  style="width: 100%; display: flex; justify-content: flex-end; align-items: center;"
-                 class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
-                <path id="edit_x" d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
+                 class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 128 512">
+                <path id="edit_x" d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z"/>
             </svg>
             </button>
         </div>
@@ -62,8 +62,8 @@
             <button id="edit_x" style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: transparent; border: 0;">
             <svg id="edit_x"
                  xmlns="http://www.w3.org/2000/svg" fill="white"
-                 class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16"  style="width: 100%; display: flex; justify-content: flex-end; align-items: center;">
-                <path id="edit_x" d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
+                 class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 128 512"  style="width: 100%; display: flex; justify-content: flex-end; align-items: center;">
+                <path id="edit_x" d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z"/>
             </svg>
             </button>
         </div>
