--- a/templates/drive.html
+++ b/templates/drive.html
@@ -187,6 +187,11 @@
 
 </div>
 
+
+<div class="editMenu2">
+
+</div>
+
 <div class="sideBar" id="sideBar">
     <button onclick="logout()" class="folderPathFont buttonSideBar"
             style="margin-top: 40px; background-color: #6752d1; color: white; border: 0; border-radius: 30px; width: 90%; display: flex; justify-content: space-around; align-items: center;">
