--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -127,6 +127,24 @@ body {
     transition: all .5s ease;
 }
 
+.editMenu2 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 20%;
+    max-width: 100vw;
+    width: 100vw;
+    background-color: #26242f;
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    transition: all .5s ease;
+}
+
 .bottomNavButton span {
     font-size: 30px;
 }
@@ -299,6 +317,11 @@ body {
 
     .editMenu {
         height: 30%;
+        width: 50%;
+        left: auto;
+    }
+    .editMenu {
+        height: 15%;
         width: 50%;
         left: auto;
     }
