--- a/templates/drive.html
+++ b/templates/drive.html
@@ -8,7 +8,7 @@
 </head>
 
 <div class="topNav">
-    <div style="display: flex; justify-content: flex-start; align-items: center; gap: 80px; margin-left: 40px; max-width: 70%; overflow-x: scroll; white-space: nowrap">
+    <div style="display: flex; justify-content: flex-start; align-items: center; gap: 80px; margin-left: 40px; max-width: 70%; overflow-x: scroll; white-space: nowrap" class="no_scroll_bar">
         <svg onclick="on_click_open_sidebar()" xmlns="http://www.w3.org/2000/svg" fill="white"
              class="bi bi-list addButtonSVG"
              viewBox="0 0 448 512">
