--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -241,6 +241,9 @@ body {
     background-color: #8992B0;
 }
 
+.no_scroll_bar::-webkit-scrollbar {
+    display: none;
+}
 
 @media (min-device-width: 12cm) {
     body::-webkit-scrollbar {
