--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -332,7 +332,7 @@ body {
         width: 50%;
         left: auto;
     }
-    .editMenu {
+    .editMenu2 {
         height: 15%;
         width: 50%;
         left: auto;
