--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -257,6 +257,7 @@ body {
     .editButtonDesktop {
         min-width: 50px;
         max-width: 50px;
+        max-height: 50px;
     }
 
     .higherElement {
