--- a/templates/drive.html
+++ b/templates/drive.html
@@ -118,6 +118,10 @@
                     <path d="M64 480H448c35.3 0 64-28.7 64-64V160c0-35.3-28.7-64-64-64H288c-10.1 0-19.6-4.7-25.6-12.8L243.2 57.6C231.1 41.5 212.1 32 192 32H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64z"/>
                 </svg>
                 {% else %}
+                <svg fill="#18a8ff" class="bi bi-folder-fill folderIconSVG"
+                     viewBox="0 0 512 512">
+                    <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"/>
+                </svg>
                 {% endif %}
                 <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
             </div>
