--- a/templates/drive.html
+++ b/templates/drive.html
@@ -206,6 +206,7 @@
 </div>
 
 <div class="sideBar" id="sideBar">
+    <span class="folderPathFont" style="color: white; margin-top: 40px;">Sechat Drive</span>
     <button onclick="logout()" class="folderPathFont buttonSideBar"
             style="margin-top: 40px; background-color: #6752d1; color: white; border: 0; border-radius: 30px; width: 90%; display: flex; justify-content: space-around; align-items: center;">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="editMenuSVG" fill="white">
