--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <link rel="stylesheet" href="/static/styles/login.css">
+    <link rel="icon" href="/static/Logo.png">
 </head>
 <body>
 <div class="main">
