--- a/templates/share_folder.html
+++ b/templates/share_folder.html
@@ -5,6 +5,7 @@
     <title>Drive</title>
     <link rel="stylesheet" href="/static/styles/drive.css">
     <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="icon" href="/static/Logo.png">
 </head>
 
 <div class="topNav">
