--- a/templates/share.html
+++ b/templates/share.html
@@ -73,7 +73,7 @@
             {% endif %}
             <span style="max-width: 60%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
-        <div class="press-hover" onclick="on_click_edit_share('{{element}}', '{{tokens[loop.index - 1]}}')"
+        <div class="press-hover editButtonDesktop" onclick="on_click_edit_share('{{element}}', '{{tokens[loop.index - 1]}}')"
              style="height: 100%; margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
             <button id="edit_x"
                     style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: transparent; border: 0;">
@@ -96,7 +96,7 @@
             </svg>
             <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
-        <div class="press-hover" onclick="on_click_edit_share('{{element}}', '{{tokens[loop.index-1]}}')"
+        <div class="press-hover editButtonDesktop" onclick="on_click_edit_share('{{element}}', '{{tokens[loop.index-1]}}')"
              style="height: 100%; margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
             <button id="edit_x"
                     style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: transparent; border: 0;">
